--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,14 @@
   "content_scripts": [{
     "all_frames": true,
     "run_at":     "document_start",
-    "matches":    ["http://v2ex.com/*", "https://v2ex.com/*"],
+    "matches":    [
+      "http://v2ex.com/",
+      "http://v2ex.com/go/*",
+      "http://v2ex.com/member/*",
+      "https://v2ex.com/",
+      "https://v2ex.com/go/*",
+      "https://v2ex.com/member/*"
+      ],
     "js":         ["jquery.js", "v2ex.com.js"]
   }],
   "permissions": [
