add www.v2ex.com in matches

--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,14 @@
     "all_frames": true,
     "run_at":     "document_start",
     "matches":    [
-      "http://v2ex.com/",
-      "http://v2ex.com/?*",
-      "http://v2ex.com/go/*",
-      "http://v2ex.com/member/*",
-      "https://v2ex.com/",
-      "https://v2ex.com/?*",
-      "https://v2ex.com/go/*",
-      "https://v2ex.com/member/*"
+      "*://v2ex.com/",
+      "*://v2ex.com/?*",
+      "*://v2ex.com/go/*",
+      "*://v2ex.com/member/*",
+      "*://www.v2ex.com/",
+      "*://www.v2ex.com/?*",
+      "*://www.v2ex.com/go/*",
+      "*://www.v2ex.com/member/*"
       ],
     "js":         ["jquery.js", "v2ex.com.js"]
   }],
